# Actions

./: .gitignore  Dockerfile  README.md  calculator.py  pyproject.toml
.github/workflows/: build-on-main.yml  complex-pipeline.yml  deploy-pages.yml  docker-image.yml  first-action.yml  lint-on-pr.yml  matrix-tests.yml  notify-on-main.yml  publish-on-tag.yml  release-on-tag.yml  scheduled-tests.yml  secrets-demo.yml  submodules.yml  test-on-pr.yml  tests-template.yml  use-tests-template.yml
site/: index.html
tests/: test_calculator.py
